<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>frmAbout</class>
 <widget class="QDialog" name="frmAbout">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>724</width>
    <height>293</height>
   </rect>
  </property>
  <property name="styleSheet">
   <string notr="true"/>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <property name="spacing">
    <number>0</number>
   </property>
   <property name="leftMargin">
    <number>0</number>
   </property>
   <property name="topMargin">
    <number>0</number>
   </property>
   <property name="rightMargin">
    <number>0</number>
   </property>
   <property name="bottomMargin">
    <number>0</number>
   </property>
   <item>
    <widget class="QWidget" name="widget_about" native="true">
     <property name="styleSheet">
      <string notr="true">QWidget#widget_about{
border:0px solid #FF0000;
border-radius:5px;
background-image: url(:/Resources/banner/about.png);
}
QLabel,QPushButton{
color: rgb(255, 255, 255);
border-radius:5px;
}</string>
     </property>
     <widget class="QLabel" name="lab_Title">
      <property name="geometry">
       <rect>
        <x>50</x>
        <y>9</y>
        <width>281</width>
        <height>31</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">font: 75 italic;</string>
      </property>
      <property name="text">
       <string>关于</string>
      </property>
     </widget>
     <widget class="QLabel" name="labHttp">
      <property name="geometry">
       <rect>
        <x>52</x>
        <y>155</y>
        <width>301</width>
        <height>31</height>
       </rect>
      </property>
      <property name="text">
       <string>网址 : http://www.northinno.com</string>
      </property>
      <property name="openExternalLinks">
       <bool>true</bool>
      </property>
     </widget>
     <widget class="QLabel" name="labTitle">
      <property name="geometry">
       <rect>
        <x>52</x>
        <y>60</y>
        <width>401</width>
        <height>51</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">font: 20pt;</string>
      </property>
      <property name="text">
       <string>监狱安防综合管理平台</string>
      </property>
     </widget>
     <widget class="QLabel" name="labAuthor">
      <property name="geometry">
       <rect>
        <x>52</x>
        <y>190</y>
        <width>301</width>
        <height>31</height>
       </rect>
      </property>
      <property name="text">
       <string>版权 : 北京北创未来科技有限公司</string>
      </property>
     </widget>
     <widget class="QLabel" name="lab_Ico">
      <property name="geometry">
       <rect>
        <x>12</x>
        <y>9</y>
        <width>31</width>
        <height>30</height>
       </rect>
      </property>
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="minimumSize">
       <size>
        <width>31</width>
        <height>0</height>
       </size>
      </property>
      <property name="text">
       <string/>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
     <widget class="QLabel" name="labVesion">
      <property name="geometry">
       <rect>
        <x>52</x>
        <y>120</y>
        <width>301</width>
        <height>31</height>
       </rect>
      </property>
      <property name="text">
       <string>版本 : V1.0</string>
      </property>
     </widget>
     <widget class="QPushButton" name="btnMenu_Close">
      <property name="geometry">
       <rect>
        <x>689</x>
        <y>2</y>
        <width>33</width>
        <height>30</height>
       </rect>
      </property>
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="cursor">
       <cursorShape>ArrowCursor</cursorShape>
      </property>
      <property name="focusPolicy">
       <enum>Qt::NoFocus</enum>
      </property>
      <property name="toolTip">
       <string>关闭</string>
      </property>
      <property name="styleSheet">
       <string notr="true"/>
      </property>
      <property name="text">
       <string/>
      </property>
      <property name="flat">
       <bool>true</bool>
      </property>
     </widget>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
